--- a/templates/cnab_upload/upload.html
+++ b/templates/cnab_upload/upload.html
@@ -1,5 +1,50 @@
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Upload">
-</form>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/form.styles.css' %}">
+</head>
+
+<body>
+
+    <form class="formText" method="post" enctype="multipart/form-data" multiple>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input class="submitForm" type="submit" value="Enviar">
+        <div class="drag-message">Arraste e solte</div>
+    </form>
+
+    <h1>Lista de Operações Importadas por Lojas</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Loja</th>
+                <th>Operação</th>
+                <th>Data</th>
+                <th>Valor</th>
+                <th>Saldo em Conta</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in items %}
+            <tr>
+                <td>{{ item.Nome_da_loja }}</td>
+                <td>{{ item.Tipo }}</td>
+                <td>{{ item.Data }}</td>
+                <td>{{ item.Valor }}</td>
+                <td>{{ item.balance }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <script src="{% static 'js/draghover.js' %}"></script>
+</body>
+
+</html>
